--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -15,86 +15,84 @@
 <body>
 <!-- Home -->
 <div data-role="page" id="home">
-    <div data-role="content">
-        <div>
-            <img class="gb-img" src="img/gb-image.png" alt="image"/>
-        </div>
-        <div class="gb-name">
-            George Barrett
-        </div>
-        <div class="gb-job">
-          CEO, Cardinal Health
-        </div>
+    <div>
+        <img class="gb-img" src="img/gb-image.png" alt="image"/>
+    </div>
+    <div class="gb-name">
+        George Barrett
+    </div>
+    <div class="gb-job">
+      CEO, Cardinal Health
+    </div>
 
-        <ul id="news" class="hlist">
-            <li style="display: block;">
-                <a href="#v1" data-transition="slide" onclick="playSelectedVideo('video1')">
-                    <div class="hsource">Russell Reynolds Associates</div>
-                    <div class="har-title">Cardinal Health's Chairman & CEO George Barrett on Board Leadership</div>
-                </a>
-            </li>
-        
-            <li style="display: none;">
-                <a href="#a7" data-transition="slide">
-                    <div class="hsource">The Columbus Dispatch</div>
-                    <div class="har-title">Cardinal Health's CEO uses background to think outside the box</div>
-                </a>
-            </li>
-            <li style="display: none;">
-                <a href="#a11" data-transition="slide">
-                    <div class="hsource">Columbus C.E.O</div>
-                    <div class="har-title">Cardinal CEO George Barrett: ‘Navigating’ amid health-care storm</div>
-                </a>
-            </li>
-            <li style="display: none;">
-                <a href="#a2" data-transition="slide">
-                    <div class="hsource">Columbus Biz Insider</div>
-                    <div class="har-title">Cardinal Health CEO George Barrett not sounding wounded over Walgreens walking</div>
-                </a>
-            </li>
-            <li style="display: none;">
-                <a href="#a6" data-transition="slide">
-                    <div class="hsource">Columbus C.E.O</div>
-                    <div class="har-title">Shattering the Ceiling</div>
-                </a>
-            </li>
-            <li style="display: none;">
-                <a href="#a8" data-transition="slide">
-                    <div class="hsource">dealbook.nytimes.com</div>
-                    <div class="har-title">Cardinal Health Is Buying Large Medical Supplier for $2 Billion</div>
-                </a>
-            </li>
-            <li style="display: none;">
-                <a href="#a1" data-transition="slide">
-                    <div class="hsource">New York Times</div>
-                    <div class="har-title">World of CEOs – George Barrett</div>
-                </a>
-            </li>
-            <li style="display: none;">
-                <a href="#a5" data-transition="slide">
-                    <div class="hsource">Cardinal Health</div>
-                    <div class="har-title">Statement of Chairman and CEO George Barrett Fortune 21 Cardinal Health Regarding Fiscal Cliff</div>
-                </a>
-            </li>
-            <li style="display: none;">
-                <a href="#a3" data-transition="slide">
-                    <div class="hsource">Examiner.com</div>
-                    <div class="har-title">George S. Barrett (Cardinal Health) in "the Corner Office”</div>
-                </a>
-            </li>        
-            <li style="display: none;">
-                <a href="#a9" data-transition="slide">
-                    <div class="hsource">staplessoccer.wordpress.com</div>
-                    <div class="har-title">Profile: George Barrett ’73, CEO of Cardinal Health</div>
-                </a>
-            </li>
-            <li style="display: none;">
-                <a href="#a4" data-transition="slide">
-                    <div class="hsource">New York Times</div>
-                    <div class="har-title">Team Insights? Just Use Your Peripheral Vision</div>
-                </a>
-            </li>
-        </ul>
+    <div id="news" class="hlist">
+        <div style="display: block;">
+            <a href="#v1" data-transition="slide" onclick="playSelectedVideo('video1')">
+                <div class="hsource">Russell Reynolds Associates</div>
+                <div class="har-title">Cardinal Health's Chairman & CEO George Barrett on Board Leadership</div>
+            </a>
+        </div>
+    
+        <div style="display: none;">
+            <a href="#a7" data-transition="slide">
+                <div class="hsource">The Columbus Dispatch</div>
+                <div class="har-title">Cardinal Health's CEO uses background to think outside the box</div>
+            </a>
+        </div>
+        <div style="display: none;">
+            <a href="#a11" data-transition="slide">
+                <div class="hsource">Columbus C.E.O</div>
+                <div class="har-title">Cardinal CEO George Barrett: ‘Navigating’ amid health-care storm</div>
+            </a>
+        </div>
+        <div style="display: none;">
+            <a href="#a2" data-transition="slide">
+                <div class="hsource">Columbus Biz Insider</div>
+                <div class="har-title">Cardinal Health CEO George Barrett not sounding wounded over Walgreens walking</div>
+            </a>
+        </div>
+        <div style="display: none;">
+            <a href="#a6" data-transition="slide">
+                <div class="hsource">Columbus C.E.O</div>
+                <div class="har-title">Shattering the Ceiling</div>
+            </a>
+        </div>
+        <div style="display: none;">
+            <a href="#a8" data-transition="slide">
+                <div class="hsource">dealbook.nytimes.com</div>
+                <div class="har-title">Cardinal Health Is Buying Large Medical Supplier for $2 Billion</div>
+            </a>
+        </div>
+        <div style="display: none;">
+            <a href="#a1" data-transition="slide">
+                <div class="hsource">New York Times</div>
+                <div class="har-title">World of CEOs – George Barrett</div>
+            </a>
+        </div>
+        <div style="display: none;">
+            <a href="#a5" data-transition="slide">
+                <div class="hsource">Cardinal Health</div>
+                <div class="har-title">Statement of Chairman and CEO George Barrett Fortune 21 Cardinal Health Regarding Fiscal Cliff</div>
+            </a>
+        </div>
+        <div style="display: none;">
+            <a href="#a3" data-transition="slide">
+                <div class="hsource">Examiner.com</div>
+                <div class="har-title">George S. Barrett (Cardinal Health) in "the Corner Office”</div>
+            </a>
+        </div>        
+        <div style="display: none;">
+            <a href="#a9" data-transition="slide">
+                <div class="hsource">staplessoccer.wordpress.com</div>
+                <div class="har-title">Profile: George Barrett ’73, CEO of Cardinal Health</div>
+            </a>
+        </div>
+        <div style="display: none;">
+            <a href="#a4" data-transition="slide">
+                <div class="hsource">New York Times</div>
+                <div class="har-title">Team Insights? Just Use Your Peripheral Vision</div>
+            </a>
+        </div>
     </div>
     <div data-theme="a" data-role="footer" data-position="fixed">
         <div data-role="navbar" data-iconpos="top" class="bar-style">
