--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=0">
+    <meta name="viewport" content="width=device-width, user-scalable=no" />
     <title></title>
   
     <link rel="stylesheet" href="css/jquery.mobile-1.3.2.css">
