--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -1169,6 +1169,8 @@
 </div>
 
 <script>
+    $('[data-position=fixed]').fixedtoolbar({ tapToggle:false});
+    
     currentVideoId = "";
     function playSelectedVideo(id){
         currentVideoId = id;
