--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -64,13 +64,6 @@
         <span class="title">Articles</span>
     </div>
     <ul id="articleList" data-role="listview" data-divider-theme="b" class="list">
-        <li data-theme="c" class="vi-bullet">
-            <a href="#v1" data-transition="slide" onclick="playSelectedVideo('video1')">
-                <div class="source">Youtube</div><br/>
-                <div class="ar-title">Cardinal Health's Chairman & CEO George Barrett on Board Leadership</div>
-            </a>
-        </li>
-        
         <li data-theme="c" class="ar-bullet">
             <a href="#a7" data-transition="slide">
                 <div class="source">The Columbus Dispatch</div><div class="ar-date">May 19, 2013</div><br/>
@@ -111,6 +104,12 @@
             <a href="#a5" data-transition="slide">
                 <div class="source">Cardinal Health</div><div class="ar-date">Dec 10, 2012</div><br/>
                 <div class="ar-title">Statement of Chairman and CEO George Barrett Fortune 21 Cardinal Health Regarding Fiscal Cliff</div>
+            </a>
+        </li>
+        <li data-theme="c" class="vi-bullet">
+            <a href="#v1" data-transition="slide" onclick="playSelectedVideo('video1')">
+                <div class="source">Youtube</div><div class="ar-date">Jun 20, 2012</div><br/>
+                <div class="ar-title">Cardinal Health's Chairman & CEO George Barrett on Board Leadership</div>
             </a>
         </li>
         <li data-theme="c" class="ar-bullet">
