--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -167,7 +167,7 @@
     <div class="d-title">
         Cardinal Health's Chairman & CEO George Barrett on Board Leadership
     </div>
-    <div class="a-body">
+    <div class="v-body">
         <video id="video1" style="width:98%" controls>
             <source src="https://s3-us-west-2.amazonaws.com/fusa/George+Barrett/g1.mp4" type="video/mp4">
             Your browser does not support the video tag.
